<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_annonces"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_deposer_annonce"
            android:icon="@drawable/ic_add_circle_white_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_categorie"
            android:icon="@drawable/ic_view_module_white_24dp"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="En plus">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
